--- a/css/Discord Reborn.css
+++ b/css/Discord Reborn.css
@@ -1,5 +1,5 @@
 /* IMPORT CSS FROM GITHUB */
-@import url("https://rawgit.com/squee666/Discord-Themes/master/css/Quiet.css");
+@import url("https://rawgit.com/squee666/Discord-Themes/master/css/Discord%20Reborn.css");
 :root { 
   --theme-name: "Reborn";
 	--theme-letter: "R";
