--- a/css/Tags.css
+++ b/css/Tags.css
@@ -7,7 +7,7 @@
 
 /* Pout's Tag Animation */
 
-.message-group:not(.compact) .avatar-large[style*="PLACERHOLDER"] ~ .comment .message h2 span.username-wrapper::after,.channel-members .member .avatar-small[style*="310719627292573697"] ~ .member-inner .member-username .member-username-inner::after {
+.message-group:not(.compact) .avatar-large[style*="133021513241591808"] ~ .comment .message h2 span.username-wrapper::after,.channel-members .member .avatar-small[style*="133021513241591808"] ~ .member-inner .member-username .member-username-inner::after {
     content:"";
     background-image: url(https://i.imgur.com/c8y7JO8.gif);
     color:#000;
