--- a/css/Tags.css
+++ b/css/Tags.css
@@ -18,6 +18,15 @@
     background-position: 0px 0px;
     left: -3px;
     -webkit-flex-shrink: 0; */
+
+[data-user-id="293540827207041027"] .username-MwOsla::after, [style*="avatars/293540827207041027"] ~ .comment .username-wrapper::after {
+    content: "";
+    background-color: transparent;
+    background-image: url(https://cdn.discordapp.com/attachments/442330724725424128/442464945318395917/image.svg);
+    padding-left: 18px;
+    margin-left: 2px;
+}
+
 .message-group:not(.compact) .avatar-large[style*="311318305564655637"] ~ .comment .message h2 span.username-wrapper::after,.channel-members .member .avatar-small[style*="311318305564655637"] ~ .member-inner .member-username .member-username-inner::after{content:"Creeper 🔫";background:#191919;color:#25bfc3;border-radius:3px;border: 1px solid transparent;margin-left:6px;font-size:10px;font-weight:600;padding:1px 4px;text-transform:uppercase;vertical-align:bottom;line-height:16px;-webkit-flex-shrink:0;flex-shrink:0;text-shadow: 0px 1px 3px #000;}
 
 @keyframes hue-rotate{from{-webkit-filter:hue-rotate();}to{-webkit-filter:hue-rotate(360deg);}}
